fix flag sitenav buttons on mobile layout

--- a/css/main.scss
+++ b/css/main.scss
@@ -97,6 +97,10 @@ a.site-title:hover {
 	.site-nav .page-link:not(:last-child) {
 		margin-right: 0;
 	}
+	.site-nav .page-link.lang-link {
+	    width: 100%;
+	    padding: 0;
+	}
 }
 @media screen and (min-width: $content-width + 1) {
 	.site-nav .page-link {
